--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend1-romegialli",
+  "name": "backend2-romegialli",
   "version": "1.0.0",
   "type": "module",
   "main": "app.js",
@@ -15,13 +15,18 @@
     "nodemon": "^3.1.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
     "express-routemap": "^1.6.0",
     "handlebars-layouts": "^3.1.4",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "mongoose-paginate-v2": "^1.8.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "socket.io": "^4.7.5"
   }
 }
